##########################################################################################
# Program Name	:	Website of Miscellaneous Projects
# Author		:	DMCTruong
# Last Updated	:	August 26, 2017
# License		:	MIT
# Description	:	A website showcasing selected projects and other implementations.             
##########################################################################################

08/26/17
- Fixed a few minor typos and bugs
- Updated Readme
- Clarified info in tools.html
- Changed tools image in index.html

08/14/17
- Redid the Art Gallery's Modal Preview.

08/11/17
- Updated some information on jQuery Color Picker page.
- Added jQuery Color Picker information on main Tools Category page.

08/10/17
- Added information on the main category pages.

07/17/17
- Updated information for projects_employee.html and projects_server.html

07/16/17
- Updated information in projects_bayes.html

07/14/17
- Minor changes to contact.html

07/11/17
- Split layout.css into default.css and custom.css

07/3/17
- Changed contact.html and projects_employee.html
- Removed unused files
- Renamed Project Pathfinder to X3DOM Project
- Fixed graphics.html and minor fixes to other pages.
- Added Spectrum jQuery Color Picker to navigation

07/2/17
- Refined and finished customizing Spectrum jQuery Color Picker

06/29/17
- Implemented test version of Spectrum jQuery Color Picker

06/27/17
- Fixed some information about projects

06/21/17
- Added more information on all projects under categories "Class Projects" and "Tools/Helpers"
- Added GitHub download button

06/18/17
- Updated index.html

06/17/17
- Added some information on projects
- Fixed headers in CSS

06/16/17
- Added slide show to projects_employee.html

06/15/17
- Fixed navigation links to reflect new website location
- Cleaned and reorganized CSS

06/14/17
- Fixed issue with modal overflow in graphics_gallery.html
- Fixed issue of images not showing up in graphics_gallery.html
- Fixed alignment issues with CSS