@@ -55,7 +55,7 @@
                                     <figure><img src="https://dmctruong.000webhostapp.com/images/index_projects.png" class="rectangle_image"  alt="">
                                         <figcaption>
                                             <h2>Class Projects</h2>
-                                            <p>This category showcases a few projects that were created in class. These projects were built based on the requirements given under the time limit of two weeks. The projects vary from implementing a Naive Bayes Classifier to a simple server/client program written in C.</p>
+                                            <p>This category showcases a few projects that were created in class. These projects were built based on the requirements given under the time limit of two weeks. The projects vary from implementing a Naive Bayes Classifier to a simple Socket Stream server/client program written in C.</p>
                                             <footer class="read_more"><a href="projects.html">Read More &raquo;</a></footer>
                                         </figcaption>
                                     </figure>
