@@ -20,7 +20,7 @@
                     <div class="dropdown-content">
                         <a href="https://dmctruong.github.io/projects_bayes.html">Naive Bayes Classifier</a>
                         <a href="https://dmctruong.github.io/projects_employee.html">Employee Management System</a>
-                        <a href="https://dmctruong.github.io/projects_server.html">Server and Client</a>
+                        <a href="https://dmctruong.github.io/projects_server.html">Socket Stream Server and Client</a>
                     </div>
                 </div>
                 <div class="dropdown">
