@@ -34,7 +34,7 @@
                     </article>
                     <article class="one_quarter">
                         <figure><a href="projects_server.html"><img src="https://dmctruong.000webhostapp.com/images/projects_server.png" width="200" height="300" alt=""></a>
-                            <figcaption style="padding-top: 20px; text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">Server and Client</figcaption>
+                            <figcaption style="padding-top: 20px; text-align: center; font-size: 20px; font-family: 'Quicksand', sans-serif;">Socket Stream Server and Client</figcaption>
                         </figure>
                     </article>
                 </section>
