@@ -22,15 +22,15 @@
                 <p align="center">Notice! This website is still under construction so some pages may be incomplete.</p> 
             </div>
             <!-- Server -->
-            <h2 class="spacing_large">Server and Client Implementation</h2>
+            <h2 class="spacing_large">Socket Stream Server and Client Implementation</h2>
 
             <!-- About -->
             <div align="center">
                 <div>
                     <p align="justify" style="margin-left: 10%; margin-right: 10%">
-                        The server and client implementation is a program written in C. The server can take login information from the client and if 
-                        the client successfully logged in, the client can send a message to the server and the server displays the message to the screen.
-                        Originally, this project was created for a class project to study. It will be expanded further with added functionality. 
+                        The Socket Stream Server and Client Implementation was a small project created for class to study about the inner workings of servers and their clients.
+                        The server can take login information from the client and if the client is successfully logged in, the client can send a message to the server from which 
+                        the server displays the received message to the screen. The project will be expanded further in the future with added functionality. 
                     </p>
                 </div>
 
@@ -49,9 +49,9 @@
                             <li>Once the two files are compiled, proceed to the Usage section for information on how to run it.</li>
                         </ol>
                         <!-- Download at GitHub-->
-                        <p>Be sure to check out the instructions in the README if you would like to download.</p>
+                        <p>Be sure to check out the instructions in the README in the root project directory if you would like to download.</p>
                     </div>
-                    <a href="https://github.com/DMCTruong/Class-Projects/tree/master/Simple-Server-and-Client" class="download_a"><button class="download" align="center">Download at GitHub</button></a>     
+                    <a href="https://github.com/DMCTruong/Class-Projects/tree/master/Socket-Stream-Server-and-Client" class="download_a"><button class="download" align="center">Download at GitHub</button></a>     
                 </div>
 
                 <!-- Usage -->
@@ -62,9 +62,9 @@
                         <ol>
                             <li>Run the compiled server program first on one terminal, then leave the server program as it is.</li>
                             <li>Next, run the compiled client program on a separate terminal</li>
-                            <li>On the client terminal, enter a user name and password that is listed on the server terminal and then wait for the server to verify and accept it.</li> 
+                            <li>On the client terminal, enter one of the user name and password pairs that is included in the passwd.txt. Then, wait for the server to verify and accept it.</li> 
                             <li>If the server accepts the user name and password, the user may enter a message and send it to the server. If all goes well, the server should send the message right back and that would be the end of the program.</li>
-                            <li>If the server does not accept the user name and password, then the user must re-enter the username and password. Be sure that the user name and password are one of the few that is already listed on the server terminal.</li>
+                            <li>If the server does not accept the user name and password, then the user must re-enter the username and password. Be sure that the user name and password are one of the few that is already listed in the passwd.txt.</li>
                         </ol>
                     </div>
                 </div>
