@@ -1,10 +1,13 @@
 ##########################################################################################
 # Program Name	:	Website of Miscellaneous Projects
 # Author		:	DMCTruong
-# Last Updated	:	August 26, 2017
+# Last Updated	:	August 27, 2017
 # License		:	MIT
 # Description	:	A website showcasing selected projects and other implementations.             
 ##########################################################################################
+
+08/27/17
+- Updated info to reflect changes to Socket Stream Server/Client Project
 
 08/26/17
 - Fixed a few minor typos and bugs
